feat: add plain portfolio text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 Elliot Thompson
+
+About
+
+I'm a developer and designer
+Focused on creating beautifully crafted web applications with enhanced user experiences
+
+Experience
+
+- Senior Software Engineer at Carewell
+- Software Engineer III at Skookum
+- Web Developer at FROG
+- Fullstack Developer at Atypic
+- Developer at WordPress VIP (Automattic)
+- Developer at Bank of America
+- Java Developer at Old Dominion Freight Line
+
+Connect
+
+- LinkedIn: https://linkedin.com/in/ethomp-dev
+- GitHub: https://github.com/ethomp-dev
+- Twitter: https://twitter.com/e4efficiency
