feat: convert plain text content into HTML

--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
-Elliot Thompson
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-About
+    <title>Elliot Thompson</title>
+    <meta name="author" content="Elliot Thompson" />
+    <meta name="description" content="Portfolio website for Elliot Thompson" />
+    <meta name="keywords" content="Elliot Thompson, Portfolio, Personal Website, Software Engineer" />
+  </head>
 
-I'm a developer and designer
-Focused on creating beautifully crafted web applications with enhanced user experiences
+  <body>
+    <main>
+      <h1>Elliot Thompson</h1>
 
-Experience
+      <img src="img/ethompson.png" alt="Profile photo of Elliot Thompson" width="100" />
 
-- Senior Software Engineer at Carewell
-- Software Engineer III at Skookum
-- Web Developer at FROG
-- Fullstack Developer at Atypic
-- Developer at WordPress VIP (Automattic)
-- Developer at Bank of America
-- Java Developer at Old Dominion Freight Line
+      <section>
+        <h2>About</h2>
 
-Connect
+        <p>I'm a developer and designer</p>
+        <p>Focused on creating beautifully crafted web applications with enhanced user experiences</p>
+      </section>
 
-- LinkedIn: https://linkedin.com/in/ethomp-dev
-- GitHub: https://github.com/ethomp-dev
-- Twitter: https://twitter.com/e4efficiency
+      <section>
+        <h2>Experience</h2>
+
+        <ul>
+          <li>Senior Software Engineer at Carewell</li>
+          <li>Software Engineer III at Skookum</li>
+          <li>Web Developer at FROG</li>
+          <li>Fullstack Developer at Atypic</li>
+          <li>Developer at WordPress VIP (Automattic)</li>
+          <li>Developer at Bank of America</li>
+          <li>Java Developer at Old Dominion Freight Line</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Connect</h2>
+
+        <ul>
+          <li>
+            <a href="https://linkedin.com/in/ethomp-dev" target="_blank">LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://github.com/ethomp-dev" target="_blank">GitHub</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/e4efficiency" target="_blank">Twitter</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
+</html>
