--- a/index.html
+++ b/index.html
@@ -53,5 +53,11 @@
         </ul>
       </section>
     </main>
+
+    <footer>
+      <!-- HTML will be inserted here via JS -->
+    </footer>
+
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
