feat: create list of skills

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </ul>
       </section>
 
+      <section id="skills">
+        <h2>Skills</h2>
+
+        <ul></ul>
+      </section>
+
       <section>
         <h2>Connect</h2>
 
