--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </ul>
       </section>
 
+      <section id="skills">
+        <h2>Skills</h2>
+
+        <ul></ul>
+      </section>
+
       <section>
         <h2>Connect</h2>
 
@@ -53,5 +59,11 @@
         </ul>
       </section>
     </main>
+
+    <footer>
+      <!-- HTML will be inserted here via JS -->
+    </footer>
+
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
