feat: add navigation menu

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
               <a class="link link--no-color strong" href="/">Elliot Thompson</a>
             </li>
           </ul>
+
+          <ul class="menu menu--hide-mobile" role="list">
+            <li class="menu__item">
+              <a class="link link--no-color" href="#about">About</a>
+            </li>
+            <li class="menu__item">
+              <a class="link link--no-color" href="#experience">Experience</a>
+            </li>
+            <li class="menu__item">
+              <a class="link link--no-color" href="#skills">Skills</a>
+            </li>
+            <li class="menu__item">
+              <a class="link link--no-color" href="#contact">Contact</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
