feat: add projects section with gh repos

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
           </p>
         </section>
 
+        <section id="skills">
+          <h2>Skills</h2>
+
+          <ul role="list">
+            <!-- HTML will be inserted here via JS -->
+          </ul>
+        </section>
+
         <section id="experience">
           <h2>Experience</h2>
 
@@ -130,10 +138,10 @@
           </ul>
         </section>
 
-        <section id="skills">
-          <h2>Skills</h2>
+        <section id="projects">
+          <h2>Projects</h2>
 
-          <ul role="list">
+          <ul>
             <!-- HTML will be inserted here via JS -->
           </ul>
         </section>
