--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
               <a class="link link--no-color" href="#about">About</a>
             </li>
             <li class="menu__item">
+              <a class="link link--no-color" href="#skills">Skills</a>
+            </li>
+            <li class="menu__item">
               <a class="link link--no-color" href="#experience">Experience</a>
             </li>
             <li class="menu__item">
-              <a class="link link--no-color" href="#skills">Skills</a>
+              <a class="link link--no-color" href="#projects">Projects</a>
             </li>
             <li class="menu__item">
               <a class="link link--no-color" href="#contact">Contact</a>
